<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:layout_weight="1"
    android:gravity="center">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#efefef"
        android:ems="10"
        android:gravity="end|center_vertical|bottom"
        android:maxLength="12"
        android:padding="10dp"
        android:text="@string/_0"
        android:textSize="48sp" />
    <LinearLayout
        android:id="@+id/llOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="32sp" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_8"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_9"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:textSize="32sp"
            android:text="@string/divide"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_4"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_5"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_6"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:textSize="32sp"
            android:text="@string/multiply"
            />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/llThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_1"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_2"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_3"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:textSize="32sp"
            android:text="@string/subtract"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:textSize="32sp"
            android:text="@string/decimal"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="32sp"
            android:text="@string/_0"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:textSize="24sp"
            android:text="@string/clr"
            />
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:textSize="32sp"
            android:text="@string/add"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onEqual"
            android:textSize="32sp"
            android:text="@string/equal"/>
    </LinearLayout>

</LinearLayout>
